--- a/poke-evolution/package.json
+++ b/poke-evolution/package.json
@@ -16,7 +16,8 @@
     "framer-motion": "^12.23.12",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "reactflow": "^11.11.4"
+    "reactflow": "^11.11.4",
+    "recharts": "^3.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
