--- a/poke-evolution/package.json
+++ b/poke-evolution/package.json
@@ -13,6 +13,7 @@
     "@types/dagre": "^0.7.53",
     "axios": "^1.12.0",
     "dagre": "^0.8.5",
+    "firebase": "^12.3.0",
     "framer-motion": "^12.23.12",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
